namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: wso2is
spec:
  finalizers:
    - kubernetes
