db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2is-rdbms-service-mysql
  namespace: wso2is
spec:
  type: ClusterIP
  selector:
    deployment: wso2is-mysql
  ports:
    - name: mysql-port
      port: 3306
      targetPort: 3306
      protocol: TCP
